<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:padding="16dp">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="118dp"
            android:layout_height="125dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:src="@drawable/icon" />

        <EditText
            android:id="@+id/username_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/icon"
            android:layout_marginBottom="60dp"
            android:backgroundTint="@color/colorDarkRed"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_login"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/colorDarkRed"
            android:hint="@string/password"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/login"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_login"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_button"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/createEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/createAccount"
            android:textColor="@color/colorRed" />
    </RelativeLayout>
</ScrollView>
